--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,8 +8,10 @@ buildscript {
         kotlinVersion = "2.0.21"
     }
     repositories {
-        google()
+        google()    
         mavenCentral()
+        maven { url 'https://maven.google.com' }
+        maven { url "https://www.jitpack.io" }
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
