linear gradient/animated carousel

--- a/ios/UIPractice/Info.plist
+++ b/ios/UIPractice/Info.plist
@@ -25,6 +25,12 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
+<key>NSCameraUsageDescription</key>
+<string>$(PRODUCT_NAME) needs access to your Camera.</string>
+
+<!-- optionally, if you want to record audio: -->
+<key>NSMicrophoneUsageDescription</key>
+<string>$(PRODUCT_NAME) needs access to your Microphone.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Want a photo access for profile Photo.</string>
 	<key>NSAppTransportSecurity</key>
