--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
+    "formik": "^2.4.6",
     "pod-install": "^0.3.9",
     "react": "19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-native": "0.79.1",
+    "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -27,7 +31,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
-    "react-native-vision-camera": "^4.6.4"
+    "react-native-vision-camera": "^4.6.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
