--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
+    "@reduxjs/toolkit": "^2.8.2",
     "formik": "^2.4.6",
     "pod-install": "^0.3.9",
     "react": "19.0.0",
@@ -32,6 +33,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
     "react-native-vision-camera": "^4.6.4",
+    "react-redux": "^9.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
