--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.14.0",
     "react-native-vision-camera": "^4.6.4",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
